[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
chrono-english = "0.1.8"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
